@@ -49,8 +49,7 @@ namespace CrateModLoader.GameSpecific.Crash2
             },
         };
 
-        public static ModPropOption Option_AllCratesBlank = new ModPropOption(Crash2_Text.Mod_AllCratesBlank, Crash2_Text.Mod_AllCratesBlankDesc);
-        public static ModPropOption Option_AllCratesWumpa = new ModPropOption(Crash2_Text.Mod_AllCratesWumpa, Crash2_Text.Mod_AllCratesWumpaDesc);
+        
         public static ModPropOption Option_RandWarpRoomExits = new ModPropOption(Crash2_Text.Rand_WarpRoom, Crash2_Text.Rand_WarpRoomDesc);
         public static ModPropOption Option_BackwardsLevels = new ModPropOption(Crash2_Text.Mod_BackwardsLevels, Crash2_Text.Mod_BackwardsLevelsDesc);
         public static ModPropOption Option_RandBackwardsLevels = new ModPropOption(Crash2_Text.Rand_BackwardsLevels, Crash2_Text.Rand_BackwardsLevelsDesc);
@@ -58,9 +57,9 @@ namespace CrateModLoader.GameSpecific.Crash2
         public static ModPropOption Option_RandBoxCount = new ModPropOption(Crash2_Text.Rand_CrateCounter, Crash2_Text.Rand_CrateCounterDesc);
         public static ModPropOption Option_RandBosses = new ModPropOption(Crash2_Text.Rand_BossLevels, Crash2_Text.Rand_BossLevelsDesc);
         public static ModPropOption Option_CameraBigFOV = new ModPropOption(Crash2_Text.Mod_CameraWideFOV, Crash2_Text.Mod_CameraWideFOVDesc);
-        public static ModPropOption Option_RandCameraFOV = new ModPropOption(Crash2_Text.Rand_CameraFOV, Crash2_Text.Rand_CameraFOVDesc);
         public static ModPropOption Option_RandSounds = new ModPropOption(Crash2_Text.Rand_SFX, Crash2_Text.Rand_SFXDesc);
         public static ModPropOption Option_RandStreams = new ModPropOption(Crash2_Text.Rand_Streams, Crash2_Text.Rand_StreamsDesc);
+        public static ModPropOption Option_RandPantsColor = new ModPropOption(Crash2_Text.Rand_PantsColor, Crash2_Text.Rand_PantsColorDesc);
         public static ModPropOption Option_RandWorldColors = new ModPropOption(Crash2_Text.Rand_WorldColors, Crash2_Text.Rand_WorldColorsDesc);
         public static ModPropOption Option_RandWorldPalette = new ModPropOption(Crash2_Text.Rand_WorldPalette, Crash2_Text.Rand_WorldPaletteDesc);
         public static ModPropOption Option_GreyscaleWorld = new ModPropOption(Crash2_Text.Mod_GreyscaleWorld, Crash2_Text.Mod_GreyscaleWorldDesc);
@@ -68,11 +67,19 @@ namespace CrateModLoader.GameSpecific.Crash2
         public static ModPropOption Option_RandWorldTex = new ModPropOption(Crash2_Text.Rand_WorldTex, Crash2_Text.Rand_WorldTexDesc);
         public static ModPropOption Option_RandObjCol = new ModPropOption(Crash2_Text.Rand_ObjCol, Crash2_Text.Rand_ObjColDesc);
         public static ModPropOption Option_RandObjTex = new ModPropOption(Crash2_Text.Rand_ObjTex, Crash2_Text.Rand_ObjTexDesc);
-        public static ModPropOption Option_RandPantsColor = new ModPropOption(Crash2_Text.Rand_PantsColor, Crash2_Text.Rand_PantsColorDesc);
 
         [ModCategory(1)]
         public static ModPropNamedFloatArray Prop_PantsColor = new ModPropNamedFloatArray(new float[3] { 0, 0, 1f }, new string[] { "Red", "Green", "Blue" }, Crash2_Text.Prop_PantsColor, Crash2_Text.Prop_PantsColorDesc);
 
+        //less used
+        [ModCategory(1)]
+        public static ModPropOption Option_AllCratesBlank = new ModPropOption(Crash2_Text.Mod_AllCratesBlank, Crash2_Text.Mod_AllCratesBlankDesc) { ModMenuOnly = true };
+        [ModCategory(1)]
+        public static ModPropOption Option_AllCratesWumpa = new ModPropOption(Crash2_Text.Mod_AllCratesWumpa, Crash2_Text.Mod_AllCratesWumpaDesc) { ModMenuOnly = true };
+        [ModCategory(1)]
+        public static ModPropOption Option_RandCameraFOV = new ModPropOption(Crash2_Text.Rand_CameraFOV, Crash2_Text.Rand_CameraFOVDesc) { ModMenuOnly = true };
+
+        //unfinished
         public static ModPropOption Option_VehicleLevelsOnFoot = new ModPropOption("Vehicle Levels On Foot", "") { Hidden = true };
         public static ModPropOption Option_MirroredWorld = new ModPropOption("Mirrored World", "") { Hidden = true };
         public static ModPropOption Option_RandMirroredWorld = new ModPropOption("Random Levels Are Mirrored", "") { Hidden = true };
